fixed menu not closing on mobile fixed logo resize for mobile fixed middle button resize for mobile

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Bebas Neue', cursive;      /* Navigation button font*/
-    font-family: 'Montserrat', sans-serif;      /* Navigation button font*/
+    font-family: 'Montserrat', sans-serif;      /* Navigation button font */
 }
 .header{
     min-height: 100vh;
@@ -10,47 +9,47 @@
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpg);
     background-position: center;
     background-size: cover;
-    position: relative;
+    position: fixed;
 }
 nav{
   display: flex;
-  padding: 2% 6%;      /* Logo padding*/
+  padding: 2% 6%;      /* Logo padding */
   justify-content: space-between;
   align-items: center;
 }
 nav img{
-    width: 150px;      /* Navigation block size*/
+    width: 150px;      /* Navigation block size */
 }
 .nav-links{
     flex: 1;
     text-align: right;
 }
-.nav-links ul li{      /* Navigation menu*/
+.nav-links ul li{      /* Navigation menu */
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
 .nav-links ul li a{
-    color: #fff;      /* Navigation button color*/
+    color: #fff;      /* Navigation button color */
     text-decoration: none;
-    font-size: 16px;      /* Font size of navigation buttons*/
+    font-size: 18px;      /* Font size of navigation buttons */
 }
 .nav-links ul li::after{
     content: '';
-    width: 0%;      /* Hove animation % before hovering*/
-    height: 2px;      /* Navigation button animation size*/
-    background: #00c3ff;      /* Color for navigation button animation*/
+    width: 0%;      /* Hove animation % before hovering */
+    height: 2px;      /* Navigation button animation size */
+    background: #00c3ff;      /* Color for navigation button animation */
     display: block;
     margin: auto;
-    transition: 0.5s;      /* Animation transition speed*/
+    transition: 0.5s;      /* Animation transition speed */
 }
 .nav-links ul li:hover::after{
-    width: 100%;      /* Hover animation % after hovering*/
+    width: 100%;      /* Hover animation % after hovering */
 }
 .text-box{
     width: 90%;
-    color: #fff;      /* Middle text color*/
+    color: #fff;      /* Middle text color */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -62,17 +61,17 @@ nav img{
 }
 .text-box p{
     margin: 10px 0 40px;
-    font-size: 18px;      /* Middle text paragraph text font size*/
-    color: #fff;      /* Middle text paragraph text color*/
+    font-size: 18px;      /* Middle text paragraph text font size */
+    color: #fff;      /* Middle text paragraph text color */
 }
 .middle-btn{
     display: inline-block;
     text-decoration: none;
     color: #fff;      /* Middle text button color*/
-    border: 2px solid #fff;      /* Middle text button border font and size*/
-    border-radius: 6px;      /* Middle button corner raidus size*/
+    border: 2px solid #fff;      /* Middle text button border font and size */
+    border-radius: 6px;      /* Middle button corner raidus size */
     padding: 12px 34px;
-    font-size: 13px;      /* Middle button text font size*/
+    font-size: 13px;      /* Middle button text font size */
     background: transparent;
     position: relative;
     cursor: pointer;
@@ -88,31 +87,63 @@ nav .fa{
     display: none;
 }
 
-@media(max-width: 700px){      /* @media rule is used in media queries to apply different styles for different media devices*/
+/* @media rule is used in media queries to apply different styles for different media devices */
+
+@media(max-width: 1000px){     
     .text-box h1{
-      font-size: 20px;
-  }
+      font-size: 65px;      /* Middle text size for mobile */
+    }
+    .text-box p{
+        font-size: 25px;      /* Middle paragraph text size for mobile */
+    }
+
   .nav-links ul li{
       display: block;
   }
+  .nav-links ul li a{
+    font-size: 30px;      /* Mobile navigation menu font size */
+    text-decoration: none;
+  }
+  .middle-btn{
+    font-size: 25px;      /* Mobile middle button size */
+  }
+  nav img{
+    width: 300px;      /* Mobile logo size */
+  }
   .nav-links{
       position: absolute;
-      background: #00c3ff;
+      background: #3b3b3b;      /* Mobile navigation menu color */
+      opacity: 100%;      /* Mobile navigation menu opacity % */
       height: 100vh;
-      width: 200px;
-      top: 0;
-      right: -200px;
+      width: 250px;      /* Mobile navigation menu width */
+      top: 0px;
+      right: -250px;
       text-align: left;
       z-index: 2;
+      transition: 1s;
   }
-  nav .fa{
+  nav .fa-times{
       display: block;
       color: #fff;
       margin: 10px;
-      font-size: 22px;
+      font-size: 66px;
       cursor: pointer;
+      opacity: 80%;      /* Navigation close icon opacity % */
+      padding-left: 15px;      /* Adds space(padding) to close icon */
   }
+  nav .fa-bars{
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 56px;
+    cursor: pointer;
+    opacity: 80%;      /* Navigation menu icon opacity % */
+    padding-left: 15px;      /* Adds space(padding) to menu icon */
+}
+  a{
+    text-decoration:none;      /* Removes purple/blue underline on icons */
+    }
   .nav-links ul{
-      padding: 30px;
+      padding: 20px;
   }
 }
